make get user and delete user by id refactor swagger.yml
